--- a/MyApplication/ViewDemo/app/src/main/res/values/strings.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ViewDemo</string>
+    <string name="title_activity_animation">AnimationActivity</string>
 </resources>
