ViewPager+Fragment,Fragment真正的onResume

--- a/MyApplication/ViewDemo/app/src/main/res/values/strings.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ViewDemo</string>
     <string name="title_activity_animation">AnimationActivity</string>
+    <string name="smoothscrolltopositionwithoffset">smoothScrollToPositionWithOffset</string>
 </resources>
