--- a/MyApplication/ViewDemo/app/src/main/res/values/strings.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ViewDemo</string>
     <string name="title_activity_animation">AnimationActivity</string>
     <string name="smoothscrolltopositionwithoffset">smoothScrollToPositionWithOffset</string>
+    <string name="title_activity_matrix_demo">MatrixDemoActivity</string>
 </resources>
